# Fambot

./: .env.example  .gitignore  AGENTS.md  README.md  cardiovascular_model.pkl  diabetes_model.pkl  firestore.rules  main.py  model.py  pyproject.toml  render.yaml
fambot_backend/: __init__.py  app.py  cardio_features.py  deps.py  firestore_users.py  inference.py  schemas.py
fambot_backend/api/routers/: chats.py  documents.py  users.py
fambot_backend/core/: chat_orchestrator.py  context_builder.py  firebase_init.py  tool_runtime.py
fambot_backend/persistence/: chat_repository.py
fambot_backend/providers/: gemini_provider.py  model_provider.py
fambot_backend/services/: chat_history.py  document_storage.py  family_invites.py  family_risk_aggregate.py  firestore_users.py  gemini_document_analysis.py  gemini_file_search.py  gemini_reports.py  inference.py
fambot_backend/telemetry/: chat_telemetry.py
tests/: conftest.py  test_family_risk_aggregate.py
tests/api/: test_auth_router.py  test_chats_router.py  test_chats_stream.py  test_documents_router.py  test_family_api_skip_firestore.py  test_health.py  test_me_auth_jwt.py  test_users_onboarding.py
tests/unit/: test_cardio_features.py  test_family_invites_pure.py  test_family_roles.py  test_gemini_chat_tool_json.py  test_gemini_document_analysis.py  test_inference.py  test_jwt_tokens.py  test_model_artifact_regression.py  test_schemas.py
